--- a/RaonwizCal_CSS_LSW.css
+++ b/RaonwizCal_CSS_LSW.css
@@ -1,6 +1,7 @@
 .div1{display:list-item; border: 2px solid gray; text-align: center;}
-.div0{border: 2px solid gray; text-align: left;}
+.div0{border: 2px solid gray;}
 .log{border: 2px solid gray; text-align: left; height: 10cm; overflow:auto;}
-h1{text-align: right;}
+.full{text-align: left;}
+input{ime-mode:disabled;text-align: right; width:96%; height:1cm; font-size: 20pt;  border: 0; outline: none; background-color: rgb(233, 233, 233);}
 .container{width: 10cm;}
 .div2{list-style:none;display: flex;}
